typescript/checker/tests/conformance/decorators/class/method/decoratorOnClassMethod3.ts.stderr
error: Unexpected token Some(At)
 --> $DIR/tests/conformance/decorators/class/method/decoratorOnClassMethod3.ts:6:12
  |
6 |     public @dec method() {}
  |            ^

